# systray-tester

./: Cargo.toml  README.md
src/: main.rs
